Remove overscroll fix & fix background gap on mobile

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -11,11 +11,11 @@ body {
   overflow-y: auto;
   font-family: var(--font-sans), sans-serif;
 
+  background-color: rgb(32, 34, 40);
   background-image: linear-gradient(to left, rgba(32, 34, 40, 0.9), rgba(32, 34, 40, 0.9)), url("/background01.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: left center;
-  overscroll-behavior: contain;
 
   color: white;
 }
@@ -36,5 +36,6 @@ body {
 @media screen and (max-width: 600px) {
   body {
     background-position: 20% center;
+    background-image: linear-gradient(to bottom, transparent, rgb(32, 34, 40)), linear-gradient(to left, rgba(32, 34, 40, 0.9), rgba(32, 34, 40, 0.9)), url("/background01.jpg");
   }
 }
