--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -401,7 +401,7 @@ body.mobileMenuOpen .mainContent {
 
 @media screen and (max-width: 600px) {
   .page {
-    padding: 24px 24px 44px;
+    padding: 24px 24px 60px;
   }
 
   .header {
